springboot-demo/kubenetes/elk日志管理/kube-logging-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-logging  # 将这里替换为你想要的命名空间名称
